[project]
name = "memori-llamaindex"
version = "0.1.0"
description = "Memori integration for LlamaIndex — persistent long-term memory for LlamaIndex agents and chat engines"
authors = [{name = "Memori Labs Team", email = "noc@memorilabs.ai"}]
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
keywords = ["ai", "memory", "agents", "llm", "llamaindex", "artificial-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "memori>=3.3.7",
    "llama-index-core>=0.10.0",
]

[project.optional-dependencies]
openai = ["llama-index-llms-openai>=0.1.0"]
anthropic = ["llama-index-llms-anthropic>=0.1.0"]
gemini = ["llama-index-llms-gemini>=0.1.0"]

[project.urls]
Homepage = "https://memorilabs.ai"
Documentation = "https://memorilabs.ai/docs/"
Repository = "https://github.com/MemoriLabs/Memori"
